# pytest_demo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  change-log.config.js  change-log_config.js  setup.cfg
.github/workflows/: changelog_workflow.yml  create_tag.yml
docs/: conf.py  making_package.html  making_package.md
docs/contributor_guide/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
docs/structure/: README.md
docs/user_guide/: README.md
src/pytestpackage/: calc_areas.py
tests/: test_circle_area.py  test_rectangle_area.py
