[metadata]
name = pytestpackage
description = a packaged example of pytest usage
author = Joshua Lynch
platforms = win32
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    pytestpackage
install_requires =
    coverage
    detect-secrets == 1.0.3
    myst-parser
    pre-commit
    pytest
    python-dotenv
    Sphinx
    toml
python_requires = >=3.6
package_dir =
    =src
zip_safe = no
